WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314804
[AppKit Gestures] Triple click does not generate a line selection on a PDF file
https://bugs.webkit.org/show_bug.cgi?id=314804
Summary
[AppKit Gestures] Triple click does not generate a line selection on a PDF file
Abrar Rahman Protyasha
Reported
2026-05-14 01:58:54 PDT
rdar://177052413
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-05-14 02:05:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64918
EWS
Comment 2
2026-05-14 19:18:32 PDT
Committed
313288@main
(d59fcec2dc3b): <
https://commits.webkit.org/313288@main
> Reviewed commits have been landed. Closing PR #64918 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug