Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm
@@ -4740,6 +4740,7 @@ PDFSelection *UnifiedPDFPlugin::selectionAtPoint(FloatPoint pointInPage, PDFPage
         case TextGranularity::WordGranularity:
             return PDFSelectionGranularityWord;
         case TextGranularity::LineGranularity:
+        case TextGranularity::ParagraphGranularity:
             return PDFSelectionGranularityLine;
         default:
             ASSERT_NOT_REACHED();
